# flask-app

./: Dockerfile  app.py  docker-compose.yml  package.json  pyproject.toml  swagger.json  swagger_config.py
controllers/: access_controllers.py  response_controllers.py  tag_controllers.py  user_controllers.py
databases/: mongodb.py
helpers/: errors.py  utils.py
middlewares/: admin_check.py  authCheck.py  auth_check.py
models/: access_model.py  response_model.py  tag_model.py  user_model.py
routes/: __init__.py
routes/v1/: __init__.py  access_routes.py  response_routes.py  tag_routes.py  user_routes.py
