[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["SchmitzErnany <ernany0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
mongoengine = "^0.24.1"
python-dotenv = "^0.20.0"
python-bsonjs = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
